# STTA-SlowFast

./: .gitignore  README.en.md  README.md  config.py  pyproject.toml  requirements.txt  train.py
configs/: ablation_tch_only.yaml  ablation_tch_thw.yaml  ablation_tcw_only.yaml  ablation_tcw_tch.yaml  ablation_tcw_thw.yaml  ablation_thw_only.yaml  base.yaml  c3d.yaml  i3d.yaml  kinetics400_stta.yaml  r2plus1d.yaml  slowfast_baseline.yaml  slowfast_stta_full.yaml  slowfast_stta_reproduce.yaml  stta_fast_only.yaml  stta_slow_only.yaml  tsm.yaml  tsn.yaml
data/: datamodule.py  dataset.py  kinetics_datamodule.py  kinetics_dataset.py  transforms.py  video_transforms.py
docs/superpowers/plans/: 2026-04-11-baseline-models.md
docs/superpowers/specs/: 2026-04-11-baseline-models-design.md
engine/: baseline_module.py  module.py
models/: __init__.py  attention.py  conv_utils.py  head.py  resnet3d.py  slowfast.py  slowfast_stta.py  tsm.py  tsn.py
tests/: _video_fixtures.py  test_attention.py  test_baseline_module.py  test_config.py  test_dataset.py  test_kinetics_datamodule.py  test_kinetics_dataset.py  test_module.py  test_module_test_step.py  test_resnet3d.py  test_slowfast.py  test_tsm.py  test_tsn.py  test_video_transforms.py
utils/: config.py  metrics.py
